--- a/data-services/dataservice.css
+++ b/data-services/dataservice.css
@@ -41,15 +41,14 @@ img.old-ds {
 .on-slide-11 code .ds-views, 
 .on-slide-12 code .key, 
 .on-slide-13 code .ts,
-.on-slide-14 code .reduce,
-.on-slide-15 code .lists  {
+.on-slide-14 code .lists  {
   color: #c00;
 }
-
+ 
 .on-slide-10 code .ds, 
-.on-slide-10 code .ds-val, 
-.on-slide-11 code .ds-views, .on-slide-12 code .ds-views, .on-slide-13 code .ds-views, .on-slide-14 code .ds-views,
-.on-slide-12 code .json, .on-slide-13 code .json, .on-slide-14 code .json  {
+.on-slide-10 code .ds-val,
+.on-slide-11 code .ds-views, .on-slide-12 code .ds-views, .on-slide-13 code .ds-views,
+.on-slide-12 code .json, .on-slide-13 code .json {
   display: inline;
 }
 
