Try using the default RTFD theme when uploaded.

--- a/docs/_static/main.css
+++ b/docs/_static/main.css
@@ -1,14 +1,4 @@
 
 @import url("sphinxdoc.css");
 
-.changes {
-    background-color: #d9ead3;
-}
-
-.deletions {
-    background-color: #cc0000;
-}
-
-.deprecation {
-    background-color: #ffe599;
-}
+@import url("custom.css");
