Adapt Kanso app to communicate with the auth server
- OAuth Management App now checks the current
user session by performing a request to the Auth
Server
- Buttons to authenticate with Google & Amazon are
added
- References to the browserid authentication are
removed

--- a/couchdb/apps/kanso/oauth-key-management/css/style.css
+++ b/couchdb/apps/kanso/oauth-key-management/css/style.css
@@ -20,6 +20,11 @@ div.head , div.credentials {
     clear: both;
 }
 
+div.credentials a {
+    margin-right: 15px;
+    text-decoration: none;
+}
+
 #browserid {
     width: auto;
 }
