Raise an error if authenticated email is missing

--- a/auth-server/app/assets/stylesheets/approvals.scss
+++ b/auth-server/app/assets/stylesheets/approvals.scss
@@ -1,9 +1,13 @@
-h1, p.notice {
+h1, p.notice, p.alert {
   margin-left: 370px;
 }
 
 p.notice {
   color: forestgreen;
+}
+
+p.alert {
+  color: firebrick;
 }
 
 .simple_form {
