Change the root page of the application
Instead of linking to a sessions controller action
, which is confusing and has little use, we now
display an informative message about the service.

--- a/auth-server/app/assets/stylesheets/approvals.scss
+++ b/auth-server/app/assets/stylesheets/approvals.scss
@@ -1,13 +1,15 @@
-h1, p.notice, p.alert {
-  margin-left: 370px;
-}
+.approval {
+  h1, p.notice, p.alert {
+    margin-left: 370px;
+  }
 
-p.notice {
-  color: forestgreen;
-}
+  p.notice {
+    color: forestgreen;
+  }
 
-p.alert {
-  color: firebrick;
+  p.alert {
+    color: firebrick;
+  }
 }
 
 .simple_form {
