--- a/auth-server/app/views/approvals/new.html.slim
+++ b/auth-server/app/views/approvals/new.html.slim
@@ -1,18 +1,19 @@
 #content
-  h1 Approval Form
-  - %i(notice alert).each do |type|
-    - if flash[type]
-      p class=(type) = flash[type]
-  = simple_form_for @approval, url: approvals_path do |f|
-    = f.input :organization_name, label: 'Name of Organization'
-    = f.input :contact_person, label: 'Point of contact (person responsible '\
-                                        'for metadata)'
-    = f.input :email, label: 'E-mail address for point of contact'
-    = f.input :estimated_records, label: 'Estimated number of records to '\
-                                           'publish'
-    = f.input :sample_record, as: :text,
-            input_html: { rows: 15 },
-            label: 'A sample of a record to be published'
-    = f.hidden_field :phone
+  .approval
+    h1 Approval Form
+    - %i(notice alert).each do |type|
+      - if flash[type]
+        p class=(type) = flash[type]
+    = simple_form_for @approval, url: approvals_path do |f|
+      = f.input :organization_name, label: 'Name of Organization'
+      = f.input :contact_person, label: 'Point of contact (person responsible '\
+                                          'for metadata)'
+      = f.input :email, label: 'E-mail address for point of contact'
+      = f.input :estimated_records, label: 'Estimated number of records to '\
+                                             'publish'
+      = f.input :sample_record, as: :text,
+              input_html: { rows: 15 },
+              label: 'A sample of a record to be published'
+      = f.hidden_field :phone
 
-    = f.button :submit
+      = f.button :submit
