Fix links in main page

--- a/auth-server/app/views/main/index.html.slim
+++ b/auth-server/app/views/main/index.html.slim
@@ -6,7 +6,8 @@
   ul
     li
       ' More info:
-      = link_to 'http://learningregistry.org/'
+      = link_to 'http://learningregistry.org/', 'http://learningregistry.org/'
     li
       ' Source code:
-      = link_to 'https://github.com/LearningRegistry/LearningRegistry'
+      = link_to 'https://github.com/LearningRegistry/LearningRegistry',
+              'https://github.com/LearningRegistry/LearningRegistry'
