--- a/auth-server/app/assets/stylesheets/approvals.scss
+++ b/auth-server/app/assets/stylesheets/approvals.scss
@@ -39,16 +39,13 @@ div.boolean label {
   margin: 0;
 }
 
-.field_with_errors {
-  background-color: #ff3333;
-}
-
 .simple_form {
   .error {
     clear: left;
     color: black;
     display: block;
-    margin-left: 120px;
+    margin-left: 370px;
+    color: firebrick;
   }
   .hint {
     clear: left;
