Set a proper label for the submit approval button

--- a/auth-server/app/views/approvals/new.html.slim
+++ b/auth-server/app/views/approvals/new.html.slim
@@ -16,4 +16,4 @@
               label: 'A sample of a record to be published'
       = f.hidden_field :phone
 
-      = f.button :submit
+      = f.submit 'Submit Approval'
