update confirmation email text for clarity

--- a/auth-server/app/views/approval_mailer/confirmation.html.slim
+++ b/auth-server/app/views/approval_mailer/confirmation.html.slim
@@ -10,6 +10,6 @@ html
       '  has been successfully approved.
     p
       ' You can now login into the
-      = link_to 'OAuth Key Management application',
+      = link_to 'Learning Registry Node',
               'https://goopen.sandbox.learningregistry.net/apps/oauth-key-management/'
       ' .
