--- a/auth-server/app/views/approval_mailer/confirmation.text.erb
+++ b/auth-server/app/views/approval_mailer/confirmation.text.erb
@@ -2,4 +2,4 @@ Hi,
 
 Your account for <%= @email %> has been successfully approved.
 
-You can now login into the Oauth Key Management application by going to https://goopen.sandbox.learningregistry.net/apps/oauth-key-management/
+You can now login into the Learning Registry Node by going to https://goopen.sandbox.learningregistry.net/apps/oauth-key-management/
